# YOLOv8_Ascend310B_object_detect

./: README.md
model/: fusion_result.json
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  label.h  sampleYOLOV8.cpp
